--- a/OmnipotentAdapter/app/src/main/res/layout/list_item.xml
+++ b/OmnipotentAdapter/app/src/main/res/layout/list_item.xml
@@ -1,24 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="5dp"
     android:orientation="vertical">
 
+        <CheckBox
+            android:id="@+id/cb"
+            android:focusable="false"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"/>
 
-
-
-        <TextView
-            android:id="@+id/title_text"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="标题一"/>
+            android:layout_toRightOf="@+id/cb"
+            android:paddingLeft="5dp"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/content_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="在仓库根目录下创建名称为“.gitignore”的文件，写入不需要的文件夹名或文件，每个元素占一行即可"/>
+                <TextView
+                    android:id="@+id/title_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    android:text="标题一"/>
 
-</LinearLayout>
+                <TextView
+                    android:id="@+id/content_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="写入不需要的文件夹名或文件，每个元素占一行即可"/>
+
+        </LinearLayout>
+</RelativeLayout>
